// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`triplify examples Alice.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" ;
	dot:contains [
		schema:name \\"Alice\\" ;
		dot:wikipath \\"Alice.md\\" ;
		dot:selector \\"Alice\\" ;
		rdf:type <http://example.org/note/Person.md> ;
		dot:related [
			dot:wikipath \\"Ice cream\\" ;
		] ;
	] .

<http://example.org/note/Person.md> schema:name \\"Person\\" .

"
`;

exports[`triplify examples People.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/People.md> schema:name \\"People\\" ;
	dot:contains [
		schema:name \\"People\\" ;
		dot:wikipath \\"People.md\\" ;
		dot:selector \\"People\\" ;
		dot:contains [
			schema:name \\"Alice\\" ;
			dot:wikipath \\"People.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://example.org/property/foaf:knows> _:b21 ;
		], [
			schema:name \\"Alison\\" ;
			dot:wikipath \\"People.md\\" ;
			dot:selector \\"Alison\\" ;
			<http://example.org/property/foaf:knows> <http://example.org/note/Alice.md> ;
		] ;
	] .

<http://example.org/property/foaf:knows> schema:name \\"foaf:knows\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" .

"
`;

exports[`triplify examples Person.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/Person.md> schema:name \\"Person\\" ;
	dot:contains [
		schema:name \\"Person\\" ;
		dot:wikipath \\"Person.md\\" ;
		dot:selector \\"Person\\" ;
		dot:contains [
			schema:name \\"Section\\" ;
			dot:wikipath \\"Person.md\\" ;
			dot:selector \\"Section\\" ;
			<http://example.org/property/property> \\"A\\" ;
		], [
			schema:name \\"Subsection\\" ;
			dot:wikipath \\"Person.md\\" ;
			dot:selector \\"Subsection\\" ;
			<http://example.org/property/property> \\"C\\" ;
		], [
			schema:name \\"Subsection\\" ;
			dot:wikipath \\"Person.md\\" ;
			dot:selector \\"Subsection\\" ;
			<http://example.org/property/property> \\"B\\" ;
			dot:tag \\"person\\" ;
		] ;
		<http://example.org/property/description> \\"the class of persons\\" ;
	] .

<http://example.org/property/description> schema:name \\"description\\" .

<http://example.org/property/property> schema:name \\"property\\" .

"
`;

exports[`triplify examples Test Canvas.canvas 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:friends schema:name \\"ex:friends\\" ;
	dot:contains <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md> ;
	<http://example.org/property/Same%20as> <http://example.org/note/Person.md> .

<http://example.org/note/bob/Bob.md> schema:name \\"Bob\\" ;
	dot:wikipath \\"bob/Bob.md\\" ;
	ex:details <http://example.org/note/bob/Bob%20Details.md> ;
	<http://example.org/property/lives%20in> <http://example.org/note/houses/BobHouse.md> ;
	<http://example.org/property/drew> <http://example.org/note/houses/img.png> .

<http://example.org/note/houses/BobHouse.md> schema:name \\"BobHouse\\" ;
	dot:wikipath \\"houses/BobHouse.md\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" ;
	dot:wikipath \\"Alice.md\\" .

<http://example.org/note/Person.md> schema:name \\"Person\\" ;
	dot:wikipath \\"Person.md\\" .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\"Bob Details\\" ;
	dot:wikipath \\"bob/Bob Details.md\\" .

<http://example.org/note/houses/img.png> schema:name \\"img.png\\" ;
	dot:wikipath \\"houses/img.png\\" .

<http://example.org/property/Same%20as> schema:name \\"Same as\\" .

<http://example.org/property/lives%20in> schema:name \\"lives in\\" .

<http://example.org/property/drew> schema:name \\"drew\\" .

<http://example.org/note/Test%20Canvas.canvas> schema:name \\"Test Canvas.canvas\\" ;
	dot:contains [
		schema:name \\"Entities\\" ;
		dot:contains ex:friends, <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md>, <http://example.org/note/Person.md>, <http://example.org/note/bob/Bob%20Details.md> ;
	], <http://example.org/note/houses/BobHouse.md>, [
		schema:name \\"Resources\\" ;
		dot:contains <http://example.org/note/houses/img.png> ;
	] .

"
`;

exports[`triplify examples Yaml.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/Yaml.md> dot:tag \\"cats\\", \\"dogs\\" ;
	<http://example.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://example.org/property/togs> \\"cats\\", \\"dogs\\" ;
	<http://example.org/property/one> \\"pepe\\", \\"carlos\\" ;
	<http://example.org/property/an-uri> <http://some-uri.com> ;
	<http://example.org/property/hello> \\"world\\" ;
	schema:name \\"Yaml\\" .

<http://example.org/property/date%20updated> schema:name \\"date updated\\" .

<http://example.org/property/togs> schema:name \\"togs\\" .

<http://example.org/property/one> schema:name \\"one\\" .

<http://example.org/property/an-uri> schema:name \\"an-uri\\" .

<http://example.org/property/hello> schema:name \\"hello\\" .

"
`;

exports[`triplify examples bob/Bob Details.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\" Pointer to section 3\\" ;
	dot:wikipath \\"Bob Details\\" ;
	dot:selector \\"^3 \\" ;
	dot:contains [
		schema:name \\"More details about Bob\\" ;
		dot:wikipath \\"bob/Bob Details.md\\" ;
		dot:selector \\"More details about Bob\\" ;
		dot:contains [
			schema:name \\"Section\\" ;
			dot:wikipath \\"bob/Bob Details.md\\" ;
			dot:selector \\"Section\\" ;
			<http://example.org/property/description> \\"Section 1\\" ;
			<http://example.org/property/somewhat%20related> <http://example.org/note/bob/Bob%20Details.md> ;
			<http://example.org/property/points%20to%20the%20document> <http://example.org/note/bob/Bob%20Details.md> ;
		], [
			schema:name \\"Section\\" ;
			dot:wikipath \\"bob/Bob Details.md\\" ;
			dot:selector \\"Section\\" ;
			<http://example.org/property/description> \\"Section 2\\" ;
			dot:related <http://example.org/note/bob/Bob%20Details.md> ;
		], [
			schema:name \\"Section\\" ;
			dot:wikipath \\"bob/Bob Details.md\\" ;
			dot:selector \\"Section\\" ;
			<http://example.org/property/description> \\"Section 3\\" ;
			dot:related [
				dot:wikipath \\"Unknown\\" ;
				dot:selector \\"^1\\" ;
			] ;
		] ;
	] .

<http://example.org/property/description> schema:name \\"description\\" .

<http://example.org/property/somewhat%20related> schema:name \\"somewhat related\\" .

<http://example.org/property/points%20to%20the%20document> schema:name \\"points to the document\\" .

"
`;

exports[`triplify examples bob/Bob.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/bob/Bob.md> <http://example.org/property/with%20image> <http://example.org/note/houses/img.png> ;
	dot:related [
		dot:wikipath \\"Link\\" ;
	] ;
	<http://example.org/property/lives%20in> <http://example.org/note/houses/BobHouse.md> ;
	<http://example.org/property/has%20details> <http://example.org/note/bob/Bob%20Details.md> ;
	ex:knows <http://example.org/note/Alice.md> ;
	<http://example.org/property/has%20image%201> <http://example.org/note/houses/img.png> ;
	a <http://example.org/note/Person.md> ;
	dot:external <http://something.com> ;
	schema:name \\"Bob\\" .

<http://example.org/property/with%20image> schema:name \\"with image\\" .

<http://example.org/note/houses/img.png> schema:name \\"img.png\\" .

<http://example.org/property/lives%20in> schema:name \\"lives in\\" .

<http://example.org/note/houses/BobHouse.md> schema:name \\"BobHouse\\" .

<http://example.org/property/has%20details> schema:name \\"has details\\" .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\"Bob Details\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" .

<http://example.org/property/has%20image%201> schema:name \\"has image 1\\" .

<http://example.org/note/Person.md> schema:name \\"Person\\" .

"
`;

exports[`triplify examples bob/links.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/bob/links.md> schema:name \\"links\\" ;
	dot:wikipath \\"bob/links.md\\", \\"links\\" ;
	dot:selector \\"Alias\\" ;
	dot:contains [
		schema:name \\"Links\\" ;
		dot:wikipath \\"bob/links.md\\" ;
		dot:selector \\"Links\\" ;
		dot:contains [
			schema:name \\"Produce two simple links\\" ;
			dot:wikipath \\"bob/links.md\\" ;
			dot:selector \\"Produce two simple links\\" ;
			dot:external <http://web1.org>, <http://web2.org> ;
		], [
			schema:name \\"Alias\\" ;
			dot:wikipath \\"bob/links.md\\" ;
			dot:selector \\"Alias\\" ;
			dot:external <https://www.rand.org/content/dam/rand/pubs/papers/2008/P899.pdf> ;
		], [
			schema:name \\"More data\\" ;
			dot:wikipath \\"bob/links.md\\" ;
			dot:selector \\"More data\\" ;
			dot:external <http://example.com>, <http://example2.com>, <http://example3.com> ;
			dot:related <http://example.org/note/bob/links.md>, <http://example.org/note/houses/img.png>, <http://example.org/note/dot%20triples.md>, <http://example.org/note/bob/Bob%20Details.md>, [
				schema:name \\"Alias 1\\" ;
				dot:wikipath \\"link 1 \\" ;
			], [
				dot:wikipath \\"link 1\\" ;
			], [
				schema:name \\"here\\" ;
				dot:wikipath \\"protocol\\" ;
			] ;
			<http://example.org/property/has%20image> <http://example.org/note/houses/img.png> ;
		] ;
	] .

<https://www.rand.org/content/dam/rand/pubs/papers/2008/P899.pdf> schema:name \\"1954\\" .

<http://example.org/property/has%20image> schema:name \\"has image\\" .

<http://example.org/note/houses/img.png> schema:name \\"img.png\\" ;
	dot:wikipath \\"img.png\\" .

<http://example.org/note/dot%20triples.md> schema:name \\"dot triples\\" ;
	dot:wikipath \\"dot triples\\" .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\"Bob Details\\" ;
	dot:wikipath \\"bob/Bob Details\\" .

<http://example.com> schema:name \\"Alias 2\\" .

<http://example3.com> schema:name \\"here\\" .

"
`;

exports[`triplify examples dot triples.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/dot%20triples.md> schema:name \\"dot triples\\" ;
	dot:contains [
		schema:name \\"Dot triples syntax\\" ;
		dot:wikipath \\"dot triples.md\\" ;
		dot:selector \\"Dot triples syntax\\" ;
		dot:contains [
			schema:name \\"Alice\\" ;
			dot:wikipath \\"dot triples.md\\" ;
			dot:selector \\"Alice\\" ;
			<http://example.org/property/has> \\"37 years old\\" ;
			ex:knows <http://example.org/note/bob/Bob.md> ;
			dot:related <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md> ;
		], [
			schema:name \\"Embedded\\" ;
			dot:wikipath \\"dot triples.md\\" ;
			dot:selector \\"Embedded\\" ;
			<http://example.org/property/EA> \\"EB\\" ;
			<http://example.org/property/EC> \\"ED\\" ;
		] ;
	] .

<http://example.org/property/has> schema:name \\"has\\" .

<http://example.org/note/bob/Bob.md> schema:name \\"Bob\\" ;
	dot:wikipath \\"Bob\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" ;
	dot:wikipath \\"Alice\\" .

<http://example.org/property/A> <http://example.org/property/B> \\"C\\" .

<http://example.org/property/B> schema:name \\"B\\" .

<http://example.org/property/EA> schema:name \\"EA\\" .

<http://example.org/property/EC> schema:name \\"EC\\" .

"
`;

exports[`triplify examples houses/BobHouse.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/houses/BobHouse.md> a \\"House\\" ;
	schema:name \\"BobHouse\\" .

"
`;

exports[`triplify examples houses/img.png 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;
